# CMEPS

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CODEOWNERS  LICENSE.TXT  Makefile  README.md  buildlib.csm_share  cmeps.mk  tcipylint
.github/: pull_request_template.md
.github/workflows/: bumpversion.yml  dockerextbuild.yml  dockersrt.yml  extbuild.yml  extbuild.yml~  srt.yml
cesm/driver/: ensemble_driver.F90  esm.F90  esmApp.F90  esm_time_mod.F90  t_driver_timers_mod.F90  util.F90
cesm/flux_atmocn/: flux_atmocn_COARE_mod.F90  flux_atmocn_Diurnal_mod.F90  flux_atmocn_Large.F90  flux_atmocn_UA_mod.F90  flux_atmocn_driver_mod.F90  shr_flux_mod.F90
cesm/nuopc_cap_share/: driver_pio_mod.F90  esm_utils_mod.F90  glc_elevclass_mod.F90  init_pio_mod.F90  nuopc_shr_methods.F90  seq_drydep_mod.F90  shr_carma_mod.F90  shr_drydep_mod.F90  shr_dust_emis_mod.F90  shr_expr_parser_mod.F90  shr_fire_emis_mod.F90  shr_lightning_coupling_mod.F90  shr_lnd2rof_tracers.F90  shr_lnd2rof_tracers_mod.F90  shr_megan_mod.F90  shr_ndep_mod.F90  shr_ozone_coupling_mod.F90  shr_pio_mod.F90
cesm/share_wrappers/: wtracers_mod.F90
cime_config/: buildexe  buildnml  config_archive.xml  config_component.xml  config_component_cesm.xml  config_component_ufs.xml  config_pes.xml  namelist_definition_drv.xml  namelist_definition_drv_flds.xml  namelist_definition_modelio.xml
cime_config/runseq/: driver_config.py  gen_runseq.py  runseq.TG.py  runseq_A.py  runseq_B.py  runseq_CG.py  runseq_D.py  runseq_FQ.py  runseq_I.py  runseq_NEMS.py  runseq_TG.py  runseq_X.py  runseq_general.py
cime_config/testdefs/: testlist_drv.xml  testlist_prealpha.xml
cmake/: FindPIO.cmake
cmeps/: shr_ozone_coupling_mod.F90
doc/: .gitignore  Makefile
doc/source/: conf.py  esmflds.rst  esmfldsexchange.rst  field_naming_convention.rst  fractions.rst  generic.rst  index.rst  introduction.rst  prep.rst
doc/source/addendum/: fieldnames.rst  index.rst  req_attributes.rst  req_attributes_cesm.rst
drivers/cime/: ensemble_driver.F90  esm.F90  esmApp.F90  esm_time_mod.F90  esm_utils_mod.F90  fd.yaml
drivers/nems/: GNUmakefile
lib/: Makefile
med_test_comps/xshare/: dead_nuopc_mod.F90
mediator/: CMakeLists.txt  ESMFConvenienceMacros.h  ESMFVersionDefine.h  Makefile  esmFlds.F90  esmFldsExchange.F90  esmFldsExchange_access_mod.F90  esmFldsExchange_cesm_mod.F90  esmFldsExchange_hafs_mod.F90  esmFldsExchange_nems_frac_mod.F90  esmFldsExchange_nems_mod.F90  esmFldsExchange_nems_orig_active_mod.F90  esmFldsExchange_nems_orig_data_mod.F90  esmFldsExchange_sofar_mod.F90  esmFldsExchange_ufs_mod.F90  fd.yaml  fd_cesm.yaml  fd_hafs.yaml  fd_nems.yaml  med.F90  med_constants_mod.F90  med_diag_mod.F90  med_enthalpy_mod.F90  med_field_info_mod.F90  med_fraction_mod.F90  med_internalstate_mod.F90  med_io_mod.F90  med_kind_mod.F90  med_map_glc2lnd_mod.F90  med_map_lnd2glc_mod.F90  med_map_mod.F90  med_map_packed_mod.F90  med_merge_mod.F90  med_methods_mod.F90  med_phases_aofluxes_mod.F90  med_phases_cdeps_mod.F90  med_phases_history_mod.F90  med_phases_ocnalb_mod.F90  med_phases_post_atm_mod.F90  med_phases_post_glc_mod.F90  (+20 more)
nems/: fd.yaml
nems/lib/: Makefile
nems/util/: Makefile  perf_mod.F90  perf_utils.F90  shr_flux_mod.F90  shr_mem_mod.F90  shr_pio_mod.F90
nuopc_cap_share/: nuopc_shr_methods.F90
share/: Makefile
share/util/: shr_flux_mod.F90
shared/: CMakeLists.txt  README.md  nuopc_shr_methods.F90  shr_abort_mod.F90  shr_kind_mod.F90  shr_log_mod.F90  shr_orb_mod.F90  shr_sys_mod.F90
src/exch_flds/: esmFldsExchange.F90
src/mediator/: med_merge_mod.F90  med_phases_prep_ocn_mod.F90
ufs/: CMakeLists.txt  Makefile  flux_atmocn_ccpp_mod.F90  flux_atmocn_mod.F90  glc_elevclass_mod.F90  ufs_const_mod.F90  ufs_io.F90  ufs_io_mod.F90  ufs_kind_mod.F90  wtracers_mod.F90
ufs/util/: CMakeLists.txt
util/: CMakeLists.txt  GNUmakefile  Makefile  glc_elevclass_mod.F90  perf_mod.F90  shr_assert_mod.F90  shr_const_mod.F90  shr_flux_mod.F90  shr_infnan_mod.F90  shr_log_mod.F90  shr_nuopc_methods_mod.F90  shr_nuopc_time_mod.F90  shr_nuopc_utils_mod.F90  shr_pio_mod.F90  update.sh
versions/: versions.json
(+64 files in other folders)
